<resources>
    <string name="app_name">Happy Gear</string>
    <string name="mobile_name">Happy Gear</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_login">Login</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_send">Send</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_signin_message">Welcome back!! Sign in to your account</string>
    <string name="text_signin_social_media">Or Sign in using social media</string>
    <string name="text_signup_social_media">Or Sign up using social media</string>
    <string name="text_signin_signup">Don\'t have an account? <b>Sign up</b></string>
    <string name="text_signup_terms">By signing up, you agree to our <b>terms and conditions</b></string>
    <string name="text_signup_message">Hello, let\'s set up your account</string>

    <string name="text_forgot_password_title">Forgot password? No worries</string>
    <string name="text_forgot_password_message">We will send you a link to reset your password</string>

    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_confirm_password">Confirm Password</string>

    <string name="navgation_home">Home</string>
    <string name="navgation_explore">Explore</string>
    <string name="navgation_cart">Cart</string>
    <string name="navgation_profile">Profile</string>
    <string name="navgation_chat">Chat</string>
    <string name="navigation_notifications">Notifications</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="find_your_product">Find your product...</string>
    <string name="channel_name">Channel 1</string>
    <string name="channel_description">This is Channel 1</string>
    <string name="channel_id">1</string>

    <string name="my_map_api_key">AIzaSyB7An3a8JrBjY68ggkW2GxXKxJndg_-vMg</string>
    <string-array name="gender">
        <item>Choose gender...</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string name="text_about_us">
        Welcome to Happy Gear, your number one source for all things about Gear. We\'re dedicated to giving you the very best of Gear, with a focus on Quality, People and Service.
        Founded in 2022 by H&amp;M, Happy Gear has come a long way from its beginnings in Viet Nam. When H&amp;M first started out, Their passion for "eco-friendly cleaning products" drove them to enjoy their computer so that Happy Gear can offer you competitive differentiator. We now serve customers all over [place - town, country, the world], and are thrilled that we\'re able to turn our passion into our own website.
        I hope you enjoy our products as much as I enjoy offering them to you. If you have any questions or comments, please don\'t hesitate to contact me.
        Sincerely,
    </string>

    <string name="type_a_message">
        Type a message
    </string>
</resources>